Attribute selectors don't handle glob namespaces (e.g. *|E) https://bugs.webkit.org/show_bug.cgi?id=64567

Reviewed by Anders Carlsson.

Source/WebCore:

Change checking of attribute selectors to match CSS 3 Selectors in
the presence of namespaces. This entails changing the algorithm to
check each attribute on an element as a match for the attribute selector
and taking into account a prefix of *.

* css/CSSStyleSelector.cpp:
(WebCore::attributeQualifiedNameMatches):
Checks if the a particular attributes qualified name matches
the attribute selector, taking into account a prefix of *.

(WebCore::attributeValueMatches):
Checks if a particular attribute on an element, matches
the attribute selector.

(WebCore::anyAttributeMatches):
Top level attribute check. Checks if any of an elements attributes
match the attribute selector.

(WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):
Factor out attribute checking code into the above functions.

LayoutTests:

Update results for correct handling of a * prefix in an attribute selector.
Fixes 50 tests.

* platform/mac/css3/selectors3/xhtml/css3-modsel-104-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-104-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-105-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-105-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-106-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-106-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-107-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-107-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-108-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-108-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-109-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-109-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-110-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-110-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-130-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-130-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-130b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-130b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-131-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-131-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-131b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-131b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-132-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-132-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-132b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-132b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-133-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-133-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-133b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-133b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-134-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-134-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-134b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-134b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-135-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-135-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-135b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-135b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-136-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-136-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-136b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-136b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-173a-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-173a-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-173b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-173b-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-174a-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-174a-expected.txt:
* platform/mac/css3/selectors3/xhtml/css3-modsel-174b-expected.png:
* platform/mac/css3/selectors3/xhtml/css3-modsel-174b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-104-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-104-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-105-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-105-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-106-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-106-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-107-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-107-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-108-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-108-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-109-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-109-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-110-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-110-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-130-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-130-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-130b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-130b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-131-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-131-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-131b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-131b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-132-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-132-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-132b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-132b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-133-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-133-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-133b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-133b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-134-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-134-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-134b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-134b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-135-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-135-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-135b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-135b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-136-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-136-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-136b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-136b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-173a-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-173a-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-173b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-173b-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-174a-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-174a-expected.txt:
* platform/mac/css3/selectors3/xml/css3-modsel-174b-expected.png:
* platform/mac/css3/selectors3/xml/css3-modsel-174b-expected.txt:


Canonical link: https://commits.webkit.org/80402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91151 268f45cc-cd09-0410-ab3c-d52691b4dbfc